# compi-proyecto

./: .gitattributes  .gitignore  README.md
compiler/: CMakeLists.txt  build.py
compiler/src/: main.cpp
compiler/src/codegen/: code_generator.h
compiler/src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
compiler/src/parser/: ast.h  ast_json_printer.cpp  ast_json_printer.h  ast_printer.cpp  ast_printer.h  parser.cpp  parser.h  visitor.h
compiler/src/semantic/: sem_type.cpp  sem_type.h  symbol_table.h  type_checker.cpp  type_checker.h
compiler/tests/error_input/: sem1.txt  sem2.txt  sem3.txt  sem4.txt  sem5.txt  sem6.txt  sem7.txt  sem8.txt  syn1.txt  syn2.txt  syn3.txt  syn4.txt
compiler/tests/error_output/output1/: summary.txt
compiler/tests/error_output/output2/: summary.txt
compiler/tests/error_output/output3/: summary.txt
compiler/tests/error_output/output4/: summary.txt
compiler/tests/error_output/output5/: summary.txt
compiler/tests/error_output/output6/: summary.txt
compiler/tests/input/: input1.txt  test_lexer.txt
compiler/tests/input/error_input/: sem3.txt  syn1.txt  syn2.txt  syn3.txt  syn5.txt
compiler/tests/input/ok_input/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt
compiler/tests/ok_input/: input3.txt  input7.txt  input8.txt
compiler/tests/output/: test_lexer_tokens.txt
compiler/tests/output/output1/: ast.txt  summary.txt  tokens.txt
compiler/tests/output/output2/: ast.txt  summary.txt  tokens.txt
compiler/tests/output/output3/: ast.txt  summary.txt  (+1 more)
compiler/tests/sandbox/: fibonacci.txt
(+27 files in other folders)
